--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio
-
-    </title>
+    <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
@@ -69,14 +67,18 @@
         </form>
     </section>
 
-    <footer>
-        <p>&copy; 2024 My Portfolio.
+    <footer class="sociall">
+        <p> 2025 My Portfolio.
             <div id="social" class="social">
-
-                <i class="fa-brands fa-square-instagram media"><a class="link" href="https://www.instagram.com/fit_vivek2?igsh=MXJ5NGc0cW5vb2g0eg==">.</a></i>
-                <i class="fa-brands fa-linkedin media"><a class="link" href="https://www.linkedin.com/in/vivek-jha-65135925b">.</a></i>
-                <i class="fa-brands fa-square-github media"><a class="About" href="">.</a></i>
-
+                <i class="fa-brands fa-square-instagram media">
+                    <a class="link" href="javascript:void(0);" onclick="openSocialMedia('https://www.instagram.com/fit_vivek2?igsh=MXJ5NGc0cW5vb2g0eg==');"></a>
+                </i>
+                <i class="fa-brands fa-linkedin media">
+                    <a class="link" href="javascript:void(0);" onclick="openSocialMedia('https://www.linkedin.com/in/vivek-jha-65135925b');"></a>
+                </i>
+                <i class="fa-brands fa-square-github media">
+                    <a class="About" href="javascript:void(0);" onclick="openSocialMedia('');"></a>
+                </i>
             </div>
         </p>
     </footer>
