--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <a class="link" href="javascript:void(0);" onclick="openSocialMedia('https://www.linkedin.com/in/vivek-jha-65135925b');"></a>
                 </i>
                 <i class="fa-brands fa-square-github media">
-                    <a class="About" href="javascript:void(0);" onclick="openSocialMedia('');"></a>
+                    <a class="About" href="javascript:void(0);" onclick="openSocialMedia('https://github.com/vivek-kumar258');"></a>
                 </i>
             </div>
         </p>
