--- a/index.html
+++ b/index.html
@@ -70,15 +70,11 @@
     <footer class="sociall">
         <p> 2025 My Portfolio.
             <div id="social" class="social">
-                <i class="fa-brands fa-square-instagram media">
-                    <a class="link" href="javascript:void(0);" onclick="openSocialMedia('https://www.instagram.com/fit_vivek2?igsh=MXJ5NGc0cW5vb2g0eg==');"></a>
-                </i>
-                <i class="fa-brands fa-linkedin media">
-                    <a class="link" href="javascript:void(0);" onclick="openSocialMedia('https://www.linkedin.com/in/vivek-jha-65135925b');"></a>
-                </i>
-                <i class="fa-brands fa-square-github media">
-                    <a class="About" href="javascript:void(0);" onclick="openSocialMedia('https://github.com/vivek-kumar258');"></a>
-                </i>
+
+                <i class="fa-brands fa-square-instagram social media" onclick="window.location.href='https://www.instagram.com/fit_vivek2?igsh=MXJ5NGc0cW5vb2g0eg=='"></i>
+                <i class="fa-brands fa-linkedin social media" onclick="window.location.href='https://www.linkedin.com/in/vivek-jha-65135925b'"></i>
+                <i class="fa-brands fa-square-github social media" onclick="window.location.href='https://github.com/vivek-kumar258'"></i>
+
             </div>
         </p>
     </footer>
