--- a/index.html
+++ b/index.html
@@ -43,10 +43,14 @@
         <div class="project">
             <h3>Project 1. Basic online clothing store interface </h3>
             <p>A basic online clothing store interface built with HTML, CSS, and JavaScript. <br> <br><strong> Features include:</strong> <br> 1. Product display <br> 2. Shopping cart <br> 3. Navigation menu</p>
+            <a href="https://vivek-kumar258.github.io/e-coomerce/#">View Project</a>
+
         </div>
         <div class="project">
             <h3>Project 2. Image Downloader </h3>
             <p> A lightweight tool built with HTML, CSS, and JavaScript, allowing users to easily download images from the web. <br> <br><strong> Features include :</strong> <br>1. Simple and intuitive interface <br> 2. Fast image download</p>
+            <a href="https://vivek-kumar258.github.io/image-downloader/#social">View Project</a>
+
         </div>
         <div class="project">
             <h3>Project 3.calculator </h3>
@@ -54,6 +58,8 @@
                 <br> 1. Addition
                 <br> 2. Subtraction
                 <br> 3. Multiplication <br> 4. Division</p>
+            <a href="https://vivek-kumar258.github.io/calculator/">View Project</a>
+
         </div>
     </section>
 
